@@ -1,3 +1,12 @@
+2012-05-21  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline
+	2012-05-21  Uros Bizjak  <ubizjak@gmail.com>
+		    H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/53416
+	* gcc.target/i386/pr53416.c: New file.
+
 2012-05-20  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/lto13.adb: New test.
